--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <div id="home-tran-btn" class="">
                   <div class="">
                     <button id="home-btn" class="btn btn-primary">Home</button>
-                    <button id="transactions-btn" class="btn btn-primary"> Transactions History</button>
+                    <button id="transactions-btn" class="btn btn-primary "> Transactions History</button>
                   </div>
                   <div class="divider"></div>
-                    <div id="transactions-container" class="hidden">
-                      <h4 class=" text-start text-xl ">Transactions History</h4>
+                    <div id="transactions-container" class="hidden space-y-2">
+                      <h4 class=" text-start text-3xl ">Transactions History :-</h4>
                      </div>
 
                      <!-- body style start  -->
@@ -202,5 +202,7 @@
  <script src="./js/utilities.js"></script>
   <script src="./js/feature.js"></script>
   <script src="./js/features.js"></script>
+  <!-- optional -->
+  <!-- <script src="./js/cashout.js"></script> -->
 </body>
 </html>
